--- a/mockez-front/src/app/app.component.html
+++ b/mockez-front/src/app/app.component.html
@@ -1,13 +1,2 @@
 <router-outlet></router-outlet>
-<div *ngIf='appConfigService.loading' id='loading'>
-  <div class='lds-roller p-0 bg-transparent'>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-</div>
+<moc-loading *ngIf='appConfigService.loading'></moc-loading>
