--- a/mockez-front/src/app/shared/component/field/field.component.html
+++ b/mockez-front/src/app/shared/component/field/field.component.html
@@ -1,10 +1,19 @@
-<div id='main'>
-  <input [formControl]='formControl'
-         [placeholder]='placeholder'
-         [style]='style'
-         [type]='type'
-         class='{{ class }} {{ isValidated && formControl.invalid ? "invalid" : "" }} border-2 p-2.5 rounded mt-4 w-full'/>
+<div id='main' class='text-sm'>
+  <p *ngIf='label' class='font-medium pl-2.5 mt-4 {{ classes }}'>{{ label | translate }}</p>
+  <div class='relative'>
+    <input #inputElement
+           [formControl]='formControl'
+           [placeholder]='placeholder'
+           [style]='styles'
+           [type]='type'
+           class='{{ (isValidated && formControl.invalid) ? "invalid" : "" }} border-2 p-2.5 rounded mt-2 w-full {{ classesField }}'/>
+    <div (click)='showPasswordChange()'
+         *ngIf='isShowEye'
+         class='absolute right-3 top-4 cursor-pointer text-lg'>
+      <i class='fa-regular fa-eye{{ isShowPassword ? "-slash" : "" }} text-gray-500'></i>
+    </div>
+  </div>
   <div *ngIf='isValidated && formControl.invalid'>
-    <app-form-error-processor [error]='formControl.errors'></app-form-error-processor>
+    <moc-form-error-processor [error]='formControl.errors'></moc-form-error-processor>
   </div>
 </div>
