MOC-1: User Interface for General Site.

--- a/mockez-front/src/app/component/auth/modal/change-password/change-password.modal.html
+++ b/mockez-front/src/app/component/auth/modal/change-password/change-password.modal.html
@@ -14,7 +14,7 @@
                label='modal.change_password.new_password'
                ngDefaultControl
                type='password'></moc-field>
-    <moc-field [classesField]='isPasswordNotMatch ? "invalid" : ""'
+    <moc-field [selfClass]='isPasswordNotMatch ? "invalid" : ""'
                [formControl]='formGroup.controls.confirmPassword'
                [placeholder]='"modal.change_password.confirm_password_placeholder" | translate'
                label='modal.change_password.confirm_password'
