--- a/mockez-front/src/app/component/auth/component/forget-password/forget-password.component.html
+++ b/mockez-front/src/app/component/auth/component/forget-password/forget-password.component.html
@@ -6,8 +6,8 @@
     <moc-field [formControl]='username'
                [placeholder]='"component.forget_password.email_address_placeholder" | translate'
                ngDefaultControl
-               classes='mt-2'
-               classesField='{{ isNotExistedUsername ? "invalid" : "" }} mt-2'
+               class='mt-2'
+               selfClass='{{ isNotExistedUsername ? "invalid" : "" }} mt-2'
                type='email'></moc-field>
     <p class='mt-2 text-red'
        *ngIf='isNotExistedUsername'>{{ 'component.forget_password.username_not_exist' | translate }}</p>
