--- a/mockez-front/src/app/component/auth/component/sign-in/sign-in.component.html
+++ b/mockez-front/src/app/component/auth/component/sign-in/sign-in.component.html
@@ -5,17 +5,18 @@
     <moc-field [formControl]='formGroup.controls.username'
                [placeholder]='"component.sign_in.username_placeholder" | translate'
                ngDefaultControl
-               classesField='mt-2'
+               selfClass='mt-2'
                type='email'></moc-field>
     <moc-field [formControl]='formGroup.controls.password'
                [placeholder]='"component.sign_in.password_placeholder" | translate'
                ngDefaultControl
-               classesField='mt-2'
+               selfClass='mt-2'
                type='password'></moc-field>
     <p class='mt-4 text-red' *ngIf='invalidAuth'>{{ 'component.sign_in.invalid_auth' | translate }}</p>
     <moc-button (click)='submit()' label='component.sign_in.continue'></moc-button>
     <p class='mt-4 text-gray-400'>{{ 'component.sign_in.or' | translate }}</p>
     <button *ngFor='let signInMethod of signInMethods'
+            (click)='signInWithMethod(signInMethod)'
             class='border font-medium mt-4 p-2.5 rounded w-full shadow relative hover:shadow-xl'>
       <img src='assets/png/auth/{{ signInMethod.icon }}.png' [alt]='signInMethod.icon' class='icon absolute'/>
       {{ 'component.sign_in.continue_with_SPACE' | translate }} {{ signInMethod.name }}
