--- a/mockez-front/src/app/shared/component/button/button.component.html
+++ b/mockez-front/src/app/shared/component/button/button.component.html
@@ -1,5 +1,8 @@
-<button
-  [style]='styles'
-  class='bg-blue p-2.5 rounded mt-4 font-medium text-white w-full hover:drop-shadow-md {{ classes }}'>
-  {{ label | translate }}
-</button>
+<div id='main' class='{{ class }}'>
+  <button
+    [style]='styles'
+    class='{{ selfClass }} bg-blue p-2.5 rounded font-medium text-white w-full hover:drop-shadow-md relative'>
+    {{ label | translate }}
+    <i *ngIf='icon' class='{{ !label ? "" : "absolute right-5 top-1/2 -translate-y-1/2" }} {{ icon }}'></i>
+  </button>
+</div>
