--- a/mockez-front/src/app/shared/component/field/field.component.html
+++ b/mockez-front/src/app/shared/component/field/field.component.html
@@ -1,12 +1,16 @@
-<div id='main' class='text-sm'>
-  <p *ngIf='label' class='font-medium pl-2.5 mt-4 mb-2 {{ classes }}'>{{ label | translate }}</p>
+<div id='main' class='text-sm {{ class }}'>
+  <p *ngIf='label' class='font-medium pl-2.5 mt-4 mb-2'>{{ label | translate }}</p>
   <div class='relative'>
     <input #inputElement
-           [formControl]='$any(formControl)'
+           [formControl]='formControl'
            [placeholder]='placeholder'
            [style]='styles'
            [type]='type'
-           class='{{ classesField }} {{ (isValidated && formControl.invalid) ? "invalid" : "" }} border-2 p-2.5 rounded w-full'/>
+           [min]='min'
+           [max]='max'
+           [minlength]='minLength'
+           [maxlength]='maxLength'
+           class='{{ selfClass }} {{ (isValidated && formControl.invalid) ? "invalid" : "" }} border p-2.5 rounded w-full'/>
     <div (click)='showPasswordChange()'
          *ngIf='isShowEye'
          class='absolute right-3 top-4 cursor-pointer text-lg'>
