--- a/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<div class='sticky top-0 w-screen z-40'>
+<div class='sticky top-0 z-40'>
   <header id='main' class='bg-white text-gray-800 flex text-sm justify-between items-center px-5'>
     <nav class='flex h-14'>
       <a href='#' class='logo flex items-center mr-10 relative'>
@@ -9,7 +9,7 @@
          class='px-4 flex items-center relative'
          routerLinkActive='active'>
         <i [class]='navigation.icon'></i>
-        <span class='ml-2 font-medium first-letter:underline'>{{ navigation.title }}</span>
+        <span class='ml-2 font-medium first-letter:underline uppercase'>{{ navigation.title }}</span>
       </a>
     </nav>
     <div class='flex items-center text-lg'>
