--- a/mocker-front/src/app/component/project/project-layout.component.html
+++ b/mocker-front/src/app/component/project/project-layout.component.html
@@ -1,2 +1,7 @@
 <moc-navigation></moc-navigation>
 <router-outlet></router-outlet>
+<div class='view-port-width-standard mx-auto text-sm'>
+  <moc-instruction></moc-instruction>
+  <moc-change-log></moc-change-log>
+  <moc-copyright></moc-copyright>
+</div>
