MOC-9: [FE] UI for Profile.

--- a/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
+++ b/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
@@ -1,8 +1,8 @@
-<div id='main' class='dialog'>
-  <div class='text-sm' [formGroup]='formGroup'>
+<div id='main' dialog [modal]='this'>
+  <div class='text-sm p-5' [formGroup]='formGroup'>
     <p class='text-center font-bold text-gray-600'>{{ 'modal.change_password.title' | translate }}</p>
     <img class='w-32 mt-4 mx-auto' src='assets/png/auth/change_password.png' alt='change_password'/>
-    <p class='mt-4 text-gray-500'>{{ 'modal.change_password.instruction' | translate }}</p>
+    <p class='mt-4 text-gray-500' *ngIf='!isShowOldPassword'>{{ 'modal.change_password.instruction' | translate }}</p>
     <moc-field *ngIf='isShowOldPassword'
                [formControl]='formGroup.controls.oldPassword'
                [placeholder]='"modal.change_password.old_password_placeholder" | translate'
@@ -22,6 +22,6 @@
                type='password'></moc-field>
     <p *ngIf='isPasswordNotMatch'
        class='text-red text-center mt-2'>{{ 'modal.change_password.password_not_match' | translate }}</p>
-    <moc-button (click)='submit()' label='modal.change_password.change_password'></moc-button>
+    <moc-button (click)='submit()' class='mt-5' selfClass='btn-primary' label='modal.change_password.change_password'></moc-button>
   </div>
 </div>
