--- a/mocker-front/src/app/component/people/component/person/person.component.html
+++ b/mocker-front/src/app/component/people/component/person/person.component.html
@@ -1,91 +1,49 @@
-<div id='main'>
-  <div class='w-full h-44 relative'>
-    <div class='absolute drop-shadow-2xl -bottom-16 view-port-width-standard'>
-      <div class='w-32 h-32 rounded-full bg-white flex justify-center items-center'>
-        <img class='rounded-full avatar' [src]='avatarUrl' alt='avatar'/>
-      </div>
+<div id='main' class='view-port-width-standard mx-auto text-sm'>
+  <p class='text-3xl font-medium mt-5'>{{ 'component.person.my_account' | translate }}</p>
+  <div class='mt-5 flex justify-between'>
+    <div class='p-5 panel border rounded'>
+      <p class='font-medium'>{{ 'component.person.my_email' | translate }}</p>
+      <moc-field type='email' ngDefaultControl [formControl]='formGroup.controls.username' class='mt-5'></moc-field>
+      <p *ngIf='isExistedUsername'
+         class='text-red text-center mt-2'>{{ 'component.sign_up.exist_username' | translate }}</p>
+      <moc-button class='mt-3 text-right'
+                  selfClass='w-28 {{ formGroup.controls.username.value === user.username ? "btn-light" : "btn-primary" }}'
+                  label='component.person.save'></moc-button>
+    </div>
+    <div class='p-5 panel border rounded'>
+      <p class='font-medium'>{{ 'component.person.my_password' | translate }}</p>
+      <moc-button (click)='changePassword()' class='mt-3' selfClass='w-52 btn-primary'
+                  label='component.person.change_password'></moc-button>
     </div>
   </div>
-  <div class='flex mt-20 view-port-width-standard mx-auto'>
-    <div class='left'>
-      <p class='text-3xl font-medium'>{{ user ? user.name : '' }}</p>
-      <p class='mt-2 text-sm'>{{ user ? user.bio : '' }}</p>
-      <div class='rounded border w-96 mt-5 p-5' [formGroup]='formGroup'>
-        <div class='text-sm'>
-          <p class='text-gray-500'>{{ 'ABOUT' | translate }}</p>
-          <div>
-            <div class='mt-2 flex items-center'>
-              <i class='w-1/12 text-gray-500 text-lg fa-regular fa-briefcase'></i>
-              <moc-field selfClass='bg-transparent border-0 hover:bg-gray' class='w-11/12'
-                         placeholder='Your job title'
-                         ngDefaultControl
-                         [formControl]='formGroup.controls.job'></moc-field>
-            </div>
-            <div class='mt-2 flex items-center'>
-              <i class='w-1/12 text-gray-500 text-lg fa-light fa-apartment'></i>
-              <moc-field selfClass='bg-transparent border-0 hover:bg-gray' class='w-11/12'
-                         placeholder='Your department'
-                         ngDefaultControl
-                         [formControl]='formGroup.controls.department'></moc-field>
-            </div>
-            <div class='mt-2 flex items-center'>
-              <i class='w-1/12 text-gray-500 text-lg fa-light fa-sitemap'></i>
-              <moc-field selfClass='bg-transparent border-0 hover:bg-gray' class='w-11/12'
-                         placeholder='Your organisation'
-                         ngDefaultControl
-                         [formControl]='formGroup.controls.organisation'></moc-field>
-            </div>
-            <div class='mt-2 flex items-center'>
-              <i class='w-1/12 text-gray-500 text-lg fa-regular fa-location-dot'></i>
-              <moc-field selfClass='bg-transparent border-0 hover:bg-gray' class='w-11/12'
-                         placeholder='Your location'
-                         ngDefaultControl
-                         [formControl]='formGroup.controls.address'></moc-field>
-            </div>
-          </div>
-        </div>
-        <div class='text-sm mt-5'>
-          <p class='text-gray-500'>{{ 'CONTACT' | translate }}</p>
-          <div>
-            <div class='mt-2 flex items-center'>
-              <i class='w-1/12 text-gray-500 text-lg fa-regular fa-envelopes'></i>
-              <moc-field selfClass='bg-transparent border-0 hover:bg-gray' class='w-11/12'
-                         placeholder='Your email'
-                         ngDefaultControl
-                         [formControl]='formGroup.controls.username'></moc-field>
-            </div>
-            <div class='mt-2 flex items-center'>
-              <i class='w-1/12 text-gray-500 text-lg fa-light fa-phone'></i>
-              <moc-field selfClass='bg-transparent border-0 hover:bg-gray' class='w-11/12'
-                         placeholder='Your phone'
-                         ngDefaultControl
-                         [formControl]='formGroup.controls.phone'></moc-field>
-            </div>
-          </div>
-        </div>
-        <div class='text-sm mt-5'>
-          <p class='text-gray-500'>{{ 'MORE' | translate }}</p>
-          <div>
-            <div class='mt-2 flex items-center'>
-              <i class='w-1/12 text-gray-500 text-lg fa-regular fa-envelopes'></i>
-              <moc-field selfClass='bg-transparent border-0 hover:bg-gray' class='w-11/12'
-                         placeholder='Your gender'
-                         ngDefaultControl
-                         [formControl]='formGroup.controls.gender'></moc-field>
-            </div>
-            <div class='mt-2 flex items-center'>
-              <i class='w-1/12 text-gray-500 text-lg fa-light fa-phone'></i>
-              <moc-field selfClass='bg-transparent border-0 hover:bg-gray' class='w-11/12'
-                         placeholder='Your date of birth'
-                         ngDefaultControl
-                         [formControl]='formGroup.controls.dob'></moc-field>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div class='mt-5 flex justify-between'>
+    <div class='p-5 panel border rounded'>
+      <p class='font-medium'>{{ 'component.person.my_api_key' | translate }}</p>
+      <moc-field ngDefaultControl [formControl]='formGroup.controls.apiKey' class='mt-5'></moc-field>
+      <p class='mt-3'>{{ 'You have used 0 of the maximum requests allowed by the free tier in the last 24 hours.' }}</p>
+      <moc-button class='mt-8 text-right' selfClass='w-52 btn-primary'
+                  label='component.person.generate_new_api_key'></moc-button>
     </div>
-    <div class='right'>
-
+    <div class='p-5 panel border rounded'>
+      <p class='font-medium'>{{ 'component.person.my_plan' | translate }}</p>
+      <p class='mt-5'><b>Free</b> - 1,000 rows/download - Free</p>
+      <moc-button class='mt-20 text-right' selfClass='w-36 btn-primary'
+                  label='component.person.change_plan'></moc-button>
     </div>
   </div>
+  <div class='mt-5 flex justify-between'>
+    <div class='p-5 panel border rounded'>
+      <p class='font-medium'>{{ 'component.person.delete_my_account' | translate }}</p>
+      <p
+        class='mt-3'>{{ 'If you delete your account, all of your data will be lost forever. Proceed with caution!' }}</p>
+      <moc-button class='mt-8 text-right' selfClass='w-52 text-white bg-red uppercase'
+                  label='component.person.delete_my_account'></moc-button>
+    </div>
+    <div class='p-5 panel border rounded'>
+      <p class='font-medium'>{{ 'component.person.my_payments' | translate }}</p>
+      <p class='mt-3'>{{ 'Here are all the payments that you have made for Mockaroo:' }}</p>
+      <moc-description class='mt-3' description='You have not made any payments.'></moc-description>
+    </div>
+  </div>
+  <moc-copyright></moc-copyright>
 </div>
