--- a/mocker-front/src/app/component/general/component/general/general.component.html
+++ b/mocker-front/src/app/component/general/component/general/general.component.html
@@ -1,6 +1,6 @@
 <div id='main' class='view-port-width-standard mx-auto text-sm'>
   <moc-description class='mt-5' [description]='"component.general.introduction" | translate'></moc-description>
-  <moc-table class='mt-16'></moc-table>
+  <moc-table-detail class='mt-16'></moc-table-detail>
   <hr class='mt-5'/>
   <div class='flex items-center mt-5' [formGroup]='formGroup'>
     <span class='mr-5'>{{ 'component.general.row' | translate }}</span>
